Fix network-switch staleness, memory leaks, and God-class review findings
Addresses a full-repo optimization review across the runtime coordination
layer, VPN/native bridge, and UI layer:

- NetworkReconciler.currentState() now reads Ipv6EnvironmentMonitor's
  already-synchronized live state instead of a locally cached field that
  only updates once a queued reconciliation task runs behind a long
  start()/restart(), which could leave a fresh start() building against a
  stale network mid-switch.
- Ipv6EnvironmentMonitor's ConnectivityManager callback now runs on a
  dedicated HandlerThread instead of main, so capability-changed callbacks
  (with their synchronous getLinkProperties() Binder call) can't block the
  UI thread.
- RuntimeLifecycle.start() self-cleans on a failed restart() instead of
  leaving service/tunManager/platformCallbacks set with runtime == null.
- RuntimeConfigTransactions no longer loses the original start failure when
  the post-rollback restore also fails.
- SelectorSession.catalog() fetches the proxy snapshot once instead of once
  per remembered network (up to 24 controller round-trips before).
- ConnectionOwnerResolver's uid->package cache now has a 10-minute TTL so
  uid reuse after an uninstall doesn't keep matching stale rules.
- AndroidVpnService resets its static always-on/lockdown flags on destroy.
- WebViewConnectProxy uses a bounded worker pool (with
  RejectedExecutionException handling) instead of an unbounded cached pool,
  and drops its TargetBinding when WebViewXhttpDialer evicts the
  corresponding idle OriginPage, closing a long-session memory leak.
- FairMemoryManager rate-limits how often an external TRIM/KILL broadcast
  can trigger real cache-release/persist work (the receiver stays exported
  by design; that's the actual OEM memory-pressure protocol contract).
- IControlCallback's 13-positional-parameter onStateChanged() is replaced
  by a single typed RuntimeSnapshotPayload parcelable.
- MainActivity's embedded networ